# araig_simulation

./: README.md  araig_simulation.rosinstall.melodic
araig_bringup_sim/: CMakeLists.txt  package.xml
araig_bringup_sim/launch/: robot.launch
araig_gazebo/: CMakeLists.txt  package.xml
araig_gazebo/launch/: robot.launch
araig_gazebo_tool/: CMakeLists.txt  package.xml
araig_gazebo_worlds/: CMakeLists.txt  package.xml
araig_gazebo_worlds/launch/: empty.xml  mobile-robot-obstacle.xml  world.launch  world_urdf.xml
araig_gazebo_worlds/media/materials/scripts/: experiments.material
araig_gazebo_worlds/media/models/: normalfloor.dae  step.dae  threshold.dae  woodfloor.dae
araig_gazebo_worlds/media/models/steps/: model.config  model.sdf
araig_gazebo_worlds/urdf/: common.xacro
araig_gazebo_worlds/urdf/manipulation/: manipulation.urdf.xacro  table.urdf.xacro  world_controller.yaml
araig_gazebo_worlds/urdf/mobile-robot-obstacle/: mobile-robot-obstacle.urdf.xacro
araig_objects/: CMakeLists.txt  package.xml
araig_objects/launch/: spawn_floor.launch  spawn_object_urdf.launch  spawn_object_xacro.launch
araig_objects/media/materials/scripts/: experiments.material
araig_objects/models/floor/: model.config  model.sdf
araig_objects/models/floor/meshes/: modular_floor.stl
araig_objects/models/tyre/: model.sdf
araig_objects/objects/: beer_hofbraeu.urdf  milk.urdf  salt.urdf  static_obstacle.urdf.xacro  tyre.sdf  zwieback.urdf
